# blurb-tester

./: .claude-context.md  .clauderc  .env.example  .gitignore  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2.5_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  README.md  SAFETY_FIXES_SUMMARY.md  aggressive_config_changes.py  amazon-aplus-content.md  check_balances.js  code_agi_outline.md  code_agi_transcript.md  dashboard.js  director_recommendation_code_agi.md  docker-compose.yml  enhanced_alerts.py  enhanced_risk_manager.py  financial_dashboard.html  growth_strategy_platform_dx.md  monitor_phase25_signal.sh  style.css
.claude/: README.md  SETUP_COMPLETE.md  aggressive_mode_enabled.md  balanced_aggressive_mode.md  session-start.sh  settings.json  trading_bots_info.md  trading_bots_status_2026-01-13.md
.tmp.driveupload/: 18800  19836  27189  27193  27205
book-formatter/: .gitignore  README.md  requirements.txt  setup.py
copart-deal-finder/: .gitignore  COPART_API_GUIDE.md  README.md  STEALTH_MODE_GUIDE.md  analyze_results.py  debug_oregon_search.py  discover_api.py  get_oregon_runners.py  main.py  quick_test.py  reprocess_vehicles.py  requirements.txt  run_full_app.py  search_actual_oregon.py  search_oregon_auctions.py  search_oregon_vehicles.py  test_angular_wait.py  test_copart_scraper.py  test_login.py  test_stealth.py  test_with_search.py  use_location_filter.py
kdp-fetch/: .gitignore  README.md  pyproject.toml
kdp-fetch/cron/: daily_kenp.sh
kdp-fetch/kdp_fetch/: backfill.py  cli.py  client.py  cookies.py  harvester.py  kenp.py  royalties.py  select_status.py
(+1315 files in other folders)
